# navio-signer

./: .gitignore  Cargo.toml  README.md  config.toml.example
contrib/: install.sh
contrib/launchd/: sh.navio.signer.plist
docs/: CONFIG.md  LAUNCHD.md  SETUP.md  TROUBLESHOOTING.md
src/: cli.rs  config.rs  db.rs  github.rs  lockfile.rs  logging.rs  main.rs  paths.rs  publish.rs
src/commands/: daemon.rs  fetch.rs  mod.rs  poll.rs  publish.rs  sign.rs  status.rs  verify.rs
src/sign/: darwin.rs  linux.rs  mod.rs  windows.rs
