[package]
name = "navio-signer"
version = "0.1.0"
edition = "2024"
description = "Signing daemon for navio-core guix release artifacts"
license = "MIT"
repository = "https://github.com/mxaddict/navio-signer"
readme = "README.md"

[[bin]]
name = "navio-signer"
path = "src/main.rs"

[[bin]]
name = "navio-signerd"
path = "src/bin/navio-signerd.rs"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
octocrab = "0.45"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xdg = "3"
zip = { version = "8", default-features = false, features = ["deflate"] }
